# Projeto-Final-P.S-Nautilus

./: CMakeLists.txt  README.md  docker-compose.yml  package.xml  setup.cfg  setup.py
Projeto-Final-P.S-Nautilus/: package.xml
Projeto-Final-P.S-Nautilus/meu_robot/: meu_robot.sdf
Projeto-Final-P.S-Nautilus/meu_robot_sim/scripts/: controle_robo.py
Projeto-Final-P.S-Nautilus/meu_robot_sim/urdf/: meu_robot.urdf
Projeto-Final-P.S-Nautilus/meu_robot_sim/worlds/: meu_mundo.world  world.config
harpia_proj_final/: move.py
install/: local_setup.sh  setup.sh
install/harpia_proj_final/share/harpia_proj_final/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/harpia_proj_final/share/harpia_proj_final/launch/: proj_final.launch.py
install/harpia_proj_final/share/harpia_proj_final/params/: bridges.yaml
launch/: proj_final.launch.py
log/: latest_build
models/: alvo.sdf  carrinho.sdf
params/: bridges.yaml
scripts/: move.py
src/entregavel/: package.xml  setup.cfg  setup.py
src/entregavel/entregavel/: programa.py  subscriber.py
worlds/: proj_final_world.sdf
